ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv-clusterip
                port:
                  number: 4501
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-srv-clusterip
                port:
                  number: 4500
